4.0.4
 * Fix timestamp tz parsing (CASSANDRA-17467)
 * Suppress CVE-2021-44521 from driver (CASSANDRA-17459)
 * Upgrade jackson to 2.13.2 (CASSANDRA-17460)
 * Make sstableloader honour native port option (CASSANDRA-17210)
 * Reject snapshot names with special character (CASSANDRA-15297)
 * Fix ObjectSizes implementation and usages (CASSANDRA-17402)
 * Fix race condition bug during local session repair (CASSANDRA-17335)
 * Fix ignored streaming encryption settings in sstableloader (CASSANDRA-17367)
 * Streaming tasks handle empty SSTables correctly (CASSANDRA-16349)
 * Prevent SSTableLoader from doing unnecessary work (CASSANDRA-16349)
Merged from 3.11:
 * Fix snapshot true size calculation (CASSANDRA-17267)
 * dropping of a materialized view creates a snapshot with dropped- prefix (CASSANDRA-17415)
 * Validate existence of DCs when repairing (CASSANDRA-17407)
Merged from 3.0:
 * ConnectionLimitHandler may leaks connection count if remote connection drops (CASSANDRA-17252)
 * Require ant >= 1.10 (CASSANDRA-17428)
 * Disallow CONTAINS for UPDATE and DELETE (CASSANDRA-15266)
 * Suppress inapplicable CVEs (CASSANDRA-17368)
 * Fix flaky test - test_cqlsh_completion.TestCqlshCompletion (CASSANDRA-17338)
 * Fixed TestCqlshOutput failing tests (CASSANDRA-17386)
 * Lazy transaction log replica creation allows incorrect replica content divergence during anticompaction (CASSANDRA-17273)
 * LeveledCompactionStrategy disk space check improvements (CASSANDRA-17272)

4.0.3
 * Deprecate otc_coalescing_strategy, otc_coalescing_window_us, otc_coalescing_enough_coalesced_messages,
   otc_backlog_expiration_interval_ms (CASSANDRA-17377)
 * Improve start up processing of Incremental Repair information read from system.repairs (CASSANDRA-17342)

4.0.2
 * Extend operator control over the UDF threading model for CVE-2021-44521 (CASSANDRA-17352)
 * Full Java 11 support (CASSANDRA-16894)
 * Remove unused 'geomet' package from cqlsh path (CASSANDRA-17271)