@@ -1297,7 +1297,7 @@ public class TableMetadata implements SchemaElement
         }
         else
         {
-            params.appendCqlTo(builder);
+            params.appendCqlTo(builder, isView());
         }
         builder.append(";");
     }
