@@ -255,7 +255,7 @@ public final class TableParams
                           .toString();
     }
 
-    public void appendCqlTo(CqlBuilder builder)
+    public void appendCqlTo(CqlBuilder builder, boolean isView)
     {
         // option names should be in alphabetical order
         builder.append("additional_write_policy = ").appendWithSingleQuotes(additionalWritePolicy.toString())
@@ -273,13 +273,18 @@ public final class TableParams
                .append("AND compression = ").append(compression.asMap())
                .newLine()
                .append("AND crc_check_chance = ").append(crcCheckChance)
-               .newLine()
-               .append("AND default_time_to_live = ").append(defaultTimeToLive)
-               .newLine()
-               .append("AND extensions = ").append(extensions.entrySet()
+               .newLine();
+
+        if (!isView)
+        {
+            builder.append("AND default_time_to_live = ").append(defaultTimeToLive)
+                   .newLine();
+        }
+
+        builder.append("AND extensions = ").append(extensions.entrySet()
                                                              .stream()
                                                              .collect(toMap(Entry::getKey,
-                                                                             e -> "0x" + ByteBufferUtil.bytesToHex(e.getValue()))),
+                                                                            e -> "0x" + ByteBufferUtil.bytesToHex(e.getValue()))),
                                                    false)
                .newLine()
                .append("AND gc_grace_seconds = ").append(gcGraceSeconds)
@@ -293,7 +298,6 @@ public final class TableParams
                .append("AND read_repair = ").appendWithSingleQuotes(readRepair.toString())
                .newLine()
                .append("AND speculative_retry = ").appendWithSingleQuotes(speculativeRetry.toString());
-
     }
 
     public static final class Builder
